sub-quests creation and add to quests
